--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
   scroll-behavior: smooth;
 }
 
+html,body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+
+}
+
 .navbar{
   background: #131313;
   height: 80px;
